--- a/codeLab/socket.io.html
+++ b/codeLab/socket.io.html
@@ -12,19 +12,30 @@
   <body>
   <input type="text" id="userInput"/>
   <input type="button" id="sendButton" onclick="send();"/>
+  <div id ="userTalks" style="width:200px;height:100%">
+
+  </div>
   <script>
       var socket = io.connect();
       //socket.emit('my event', 'Hello world.')
       socket.on('connect', function(){
-          alert(1);
+          document.getElementById('userTalks').innerHTML = '连接成功';
+          socket.emit('userLogin', {userName:'test', groupName: 'testGroup'}, function(response){
+              document.getElementById('userTalks').innerHTML+= '<p>'+response.msg+'</p>';
+          });
+
           socket.on('ready', function () {
               console.log('Connected !');
               socket.emit('msg', confirm('What is your message?'));
           });
           socket.on('sysinfo',function(data){
               console.log(data);
-          })
+          });
+          socket.on('userTalk',function(data){
+              document.getElementById('userTalks').innerHTML+= '<p>'+data.text+'</p>';
+          });
       });
+
       function send(){
           var inputTxt = document.getElementById('userInput').value;
           socket.emit('userTalk',{text:inputTxt});
